Extreme Difficulty: Fast Jump, High Speed, Hard Spawn

--- a/run.html
+++ b/run.html
@@ -170,11 +170,11 @@
         const canvas = document.getElementById('canvas');
         const ctx = canvas.getContext('2d');
 
-        // --- PHYSICS CONFIG (TUNED 2.0) ---
-        const GRAVITY = 0.9;
-        const JUMP_POWER = -22; // Much Higher Jump
-        const DOUBLE_JUMP_POWER = -18;
-        const SPEED_START = 13; // Increased from 8 to 13
+        // --- PHYSICS CONFIG (EXTREME) ---
+        const GRAVITY = 1.5; // Snappier fall
+        const JUMP_POWER = -26; // Stronger jump to compensate gravity
+        const DOUBLE_JUMP_POWER = -20;
+        const SPEED_START = 16; // Very fast start
 
         // --- GAME VARIABLES ---
         let speed = SPEED_START;
@@ -186,96 +186,14 @@
         let bgOffset = 0;
         let warningTimer = 0; // For missile warning
 
-        // --- ENTITIES ---
-        let player = {
-            x: 100, y: 0, w: 60, h: 80, vy: 0,
-            state: 'run',
-            groundY: 0,
-            isGrounded: false,
-            jumpCount: 0,
-            runFrame: 0
-        };
-
-        let obstacles = [];
-        let items = [];
-        let particles = [];
-
-        // --- INIT & LOOP ---
-        function resize() {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-            player.groundY = canvas.height - 180;
-            if (!isRunning) player.y = player.groundY;
-        }
-        window.addEventListener('resize', resize);
-
-        function init() {
-            resize();
-            player.y = player.groundY;
-
-            // Add Global Interaction Listener
-            ['mousedown', 'touchstart', 'keydown'].forEach(evt =>
-                window.addEventListener(evt, () => {
-                    if (!isRunning && document.getElementById('game-over').style.display === 'none') {
-                        // Only start if not game over and not running
-                        startFirst();
-                    }
-                }, { once: true })
-            );
-
-            if (frame === 0 && !isRunning) {
-                // Initial render helper
-                // draw() might not be defined yet if hoisted, but loop calls it. 
-                // We'll trust the order or that draw is hoisted.
-                requestAnimationFrame(draw);
-            }
-        }
-
-        function resetGame() {
-            obstacles = [];
-            items = [];
-            particles = [];
-            score = 0;
-            hp = 100;
-            speed = SPEED_START;
-            frame = 0;
-
-            player.y = player.groundY;
-            player.vy = 0;
-            player.state = 'run';
-            player.jumpCount = 0;
-
-            document.getElementById('game-over').style.display = 'none';
-            document.getElementById('tutorial-msg').style.display = 'none';
-
-            isRunning = true;
-            isPaused = false;
-            requestAnimationFrame(loop);
-        }
-
-        function togglePause() {
-            if (!isRunning) return;
-            isPaused = !isPaused;
-            if (!isPaused) requestAnimationFrame(loop);
-        }
-
-        function loop() {
-            if (!isRunning) {
-                return;
-            }
-            if (isPaused) return;
-
-            update();
-            draw();
-            requestAnimationFrame(loop);
-        }
+        // ... [ENTITIES array stays same] ...
 
         function update() {
             frame++;
-            // Harder Difficulty Scaling: Speed cap increased to 35, faster acceleration
-            speed = Math.min(35, SPEED_START + frame * 0.005); // Faster accel (0.003 -> 0.005)
+            // Harder Difficulty Scaling: Extreme Speed
+            speed = Math.min(50, SPEED_START + frame * 0.008);
             bgOffset += speed * 0.5;
-            player.runFrame += 0.2 + (speed - SPEED_START) * 0.01; // Animated faster with speed
+            player.runFrame += 0.2 + (speed - SPEED_START) * 0.01;
 
             // --- PLAYER PHYSICS (FIXED) ---
             if (player.state === 'slide') {
@@ -305,9 +223,9 @@
                 if (player.state !== 'slide') player.state = 'jump';
             }
 
-            // --- SPAWN LOGIC (Harder) ---
-            // Spawn rate increases with speed (less frames between spawns)
-            let spawnRate = Math.max(40, Math.floor(1400 / speed));
+            // --- SPAWN LOGIC (Extreme) ---
+            // Spawn rate much tighter
+            let spawnRate = Math.max(30, Math.floor(1000 / speed));
             if (frame % spawnRate === 0) {
                 spawnObstacle();
             }
