--- a/run.html
+++ b/run.html
@@ -186,7 +186,86 @@
         let bgOffset = 0;
         let warningTimer = 0; // For missile warning
 
-        // ... [ENTITIES array stays same] ...
+        // --- ENTITIES ---
+        let player = {
+            x: 100, y: 0, w: 60, h: 80, vy: 0,
+            state: 'run',
+            groundY: 0,
+            isGrounded: false,
+            jumpCount: 0,
+            runFrame: 0
+        };
+
+        let obstacles = [];
+        let items = [];
+        let particles = [];
+
+        // --- INIT & LOOP ---
+        function resize() {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            player.groundY = canvas.height - 180;
+            if (!isRunning) player.y = player.groundY;
+        }
+        window.addEventListener('resize', resize);
+
+        function init() {
+            resize();
+            player.y = player.groundY;
+
+            // Add Global Interaction Listener
+            ['mousedown', 'touchstart', 'keydown'].forEach(evt =>
+                window.addEventListener(evt, () => {
+                    if (!isRunning && document.getElementById('game-over').style.display === 'none') {
+                        // Only start if not game over and not running
+                        startFirst();
+                    }
+                }, { once: true })
+            );
+
+            if (frame === 0 && !isRunning) {
+                requestAnimationFrame(draw);
+            }
+        }
+
+        function resetGame() {
+            obstacles = [];
+            items = [];
+            particles = [];
+            score = 0;
+            hp = 100;
+            speed = SPEED_START;
+            frame = 0;
+
+            player.y = player.groundY;
+            player.vy = 0;
+            player.state = 'run';
+            player.jumpCount = 0;
+
+            document.getElementById('game-over').style.display = 'none';
+            document.getElementById('tutorial-msg').style.display = 'none';
+
+            isRunning = true;
+            isPaused = false;
+            requestAnimationFrame(loop);
+        }
+
+        function togglePause() {
+            if (!isRunning) return;
+            isPaused = !isPaused;
+            if (!isPaused) requestAnimationFrame(loop);
+        }
+
+        function loop() {
+            if (!isRunning) {
+                return;
+            }
+            if (isPaused) return;
+
+            update();
+            draw();
+            requestAnimationFrame(loop);
+        }
 
         function update() {
             frame++;
