Extreme Speed: Start 20, Max 60

--- a/run.html
+++ b/run.html
@@ -174,7 +174,7 @@
         const GRAVITY = 1.5; // Snappier fall
         const JUMP_POWER = -26; // Stronger jump to compensate gravity
         const DOUBLE_JUMP_POWER = -20;
-        const SPEED_START = 16; // Very fast start
+        const SPEED_START = 20; // START VERY FAST
 
         // --- GAME VARIABLES ---
         let speed = SPEED_START;
