Add Mobile Support: Split Screen Touch Controls

--- a/run.html
+++ b/run.html
@@ -154,7 +154,10 @@
         <button id="pause-btn" onclick="togglePause()">II</button>
     </div>
 
-    <div id="tutorial-msg" class="tutorial">PRESS SPACE TO START<br>SPACE: JUMP | DOWN: SLIDE</div>
+    <div id="tutorial-msg" class="tutorial">
+        PC: SPACE=JUMP | DOWN=SLIDE<br>
+        MOBILE: TOUCH RIGHT=JUMP | TOUCH LEFT=SLIDE
+    </div>
 
     <div id="game-over">
         <h1 style="font-size:60px; margin-bottom:10px;">GAME OVER</h1>
