Fix Mobile Controls: Swap Left/Right & Prevent Touch Restart

--- a/run.html
+++ b/run.html
@@ -156,7 +156,7 @@
 
     <div id="tutorial-msg" class="tutorial">
         PC: SPACE=JUMP | DOWN=SLIDE<br>
-        MOBILE: TOUCH RIGHT=JUMP | TOUCH LEFT=SLIDE
+        MOBILE: TOUCH LEFT=JUMP | TOUCH RIGHT=SLIDE
     </div>
 
     <div id="game-over">
