--- a/run.html
+++ b/run.html
@@ -14,12 +14,18 @@
             background: #87CEEB;
             font-family: 'Pretendard', sans-serif;
             user-select: none;
+            -webkit-user-select: none;
+            /* Safari */
+            touch-action: none;
+            /* GLOBAL DISABLE SCROLL */
         }
 
         canvas {
             display: block;
             width: 100vw;
             height: 100vh;
+            touch-action: none;
+            /* CRITICAL: Allows raw touch input */
         }
 
         #ui-layer {
@@ -34,6 +40,8 @@
             justify-content: space-between;
             padding: 20px;
             box-sizing: border-box;
+            touch-action: none;
+            /* CRITICAL: Allows raw touch input */
         }
 
         #score-box {
@@ -151,7 +159,7 @@
             </div>
             <div id="score-box">0</div>
         </div>
-        <button id="pause-btn" onclick="togglePause()">II</button>
+        <button id="pause-btn" onpointerdown="event.stopPropagation()" onclick="togglePause()">II</button>
     </div>
 
     <div id="tutorial-msg" class="tutorial">
@@ -162,8 +170,8 @@
     <div id="game-over">
         <h1 style="font-size:60px; margin-bottom:10px;">GAME OVER</h1>
         <p style="font-size:24px; margin-bottom:30px;">Score: <span id="final-score">0</span></p>
-        <button onclick="resetGame()">RETRY (SPACE)</button>
-        <button onclick="location.href='games.html'"
+        <button onpointerdown="event.stopPropagation()" onclick="resetGame()">RETRY (SPACE)</button>
+        <button onpointerdown="event.stopPropagation()" onclick="location.href='games.html'"
             style="background:#555; color:#fff; box-shadow:0 4px 0 #333; margin-top:10px;">EXIT</button>
     </div>
 
